# crew_flow_scrum_team

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  poem.txt  presentation.html  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: 🎃 Playwright QA - Demon Playwright.md  🎃 Playwright QA.md  👹 PM - Demon King.md  👹 PM.md  👺 QA Lead - Evil Tester.md  👺 QA Lead.md  💀 Frontend Dev - Skull Master.md  💀 Frontend Dev.md  🔥 Backend Dev - Hell Flames.md  🔥 Backend Dev.md  🔷 Jira Assistant.md  😈 Tech Lead - Devil Leader.md  😈 Tech Lead.md  🩸 Healer QA V1.md  🩸 Healer QA.md
docs/: Requirement.md  requirements.md
docs/copilot/: account_management_technical_design.md  trading_account_management_user_stories.md
docs/crew/: technical_design.md  trading_simulation_technical_design.md  trading_simulation_test_plan.json  trading_simulation_user_stories.md
docs/requirements/: habit-tracker-requirements.md  requirements.md
docs/user_stories/: account_management_UserStories.md
e2e/: CA-001_US-001_Successful_Account_Creation.spec.ts  CA-002_US-001_Missing_Username_Validation.spec.ts  DP-001_US-002_Successful_Deposit.spec.ts  DP-002_US-002_Non_Positive_Amount_Validation_Zero.spec.ts  DP-004_US-002_Non_Numeric_Deposit.spec.ts  DP-005_US-002_Large_Deposit_Boundary.spec.ts  TS-1.3_US-001_ReInitializationAttemptAfterSuccess.spec.ts  TS-1.5_US-001_HoldingsTableEmptyState.spec.ts  seed.spec.ts
e2e/copilot/: CA-001_US-001_Successful_Account_Creation.spec.ts  CA-002_US-001_Missing_Username_Validation.spec.ts  (+2 more)
specs/: noel-theme-guide.md
(+71 files in other folders)
