[project]
name = "scrum_team"
version = "0.1.0"
description = "scrum_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,google-genai,tools]==1.3.0",
    "pydantic>=2.6.0,<3.0.0",
    "gradio>=4.0.0",
    "requests>=2.31.0",
]

[project.scripts]
kickoff = "scrum_team.main:kickoff"
run_crew = "scrum_team.main:kickoff"
plot = "scrum_team.main:plot"
run_with_trigger = "scrum_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
